[WEB][ADD] About me component

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -13,3 +13,20 @@ body {
   color: rgb(var(--foreground-rgb));
   font-family: 'Poppins', sans-serif !important;
 }
+
+/* animation.css */
+
+.fade-in {
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
