--- a/web/src/app/_component/homeComponent/Header/Header.module.scss
+++ b/web/src/app/_component/homeComponent/Header/Header.module.scss
@@ -1,5 +1,6 @@
 .MainTitle {
     font-size: 5rem;
+    color: #212121;
 }
 
 .Content {
@@ -14,10 +15,14 @@
     padding: 10rem 10rem 0rem 10rem;
 }
 
+.Image {
+    margin-left: 10rem;
+}
+
 .TextContent {
     border: 0;
     font-family: inherit;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-style: inherit;
     font-weight: inherit;
     margin: 0;
@@ -25,7 +30,8 @@
     padding: 0;
     vertical-align: baseline;
     width: 35rem;
-    margin: 5rem 0 5rem 0;
+    margin: 0rem 0 5rem 0;
+    color: #4D4D4D
 }
 
 @media (max-width: 500px) {
