--- a/web/src/app/_component/homeComponent/ClientSay/ClientSay.module.scss
+++ b/web/src/app/_component/homeComponent/ClientSay/ClientSay.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 5rem;
+    padding: 5rem 0 7rem 0;
     background-color: #FFFCF9;
 }
 
@@ -21,6 +21,12 @@
     margin: 1rem 0 4rem 0;
 }
 
+.Line2 {
+    @extend .Line1;
+    width: 10%;
+    margin: 1rem 0 2rem 0;
+}
+
 .MainContainer {
     display: flex;
     width: 100dvw;
@@ -31,15 +37,19 @@
 .Content {
     display: flex;
     flex-direction: column;
-    padding: 3rem;
+    margin: 1.5rem;
+    padding: 2rem;
+    background-color: #FEFFFE;
+    box-shadow: 0px 0px 45px 0px #F0EBEB;
+    border-radius: 6px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 
-.SubTitle {
-    font-size: 26px;
-    font-weight: 500;
-    line-height: 2.1rem;
-    width: 20rem;
-    margin: 1rem 0 1rem 0;
+.Name {
+    @extend .TextContent;
+    font-size: 20px;
 }
 
 .TextContent {
@@ -52,9 +62,15 @@
     outline: 0;
     padding: 0;
     vertical-align: baseline;
-    width: 19rem;
+    width: 16rem;
     margin: 0rem 0 1rem 0;
-    color: #4D4D4D
+    color: #4D4D4D;
+}
+
+.Image {
+    border-radius: 50%;
+    border: 2px solid #49A078;
+    margin: 2rem 0 2rem 0;
 }
 
 @media (max-width: 500px) {
