--- a/web/src/app/_component/homeComponent/Projects/Projects.module.scss
+++ b/web/src/app/_component/homeComponent/Projects/Projects.module.scss
@@ -18,7 +18,7 @@
     margin: 0 auto;
     margin-left: 0;
     border-top: 2px solid #49A078;
-    margin: 0 0 4rem 0;
+    margin: 1rem 0 4rem 0;
 }
 
 .MainContainer {
