--- a/web/src/app/_component/homeComponent/WorkExperiences/WorkExperiences.module.scss
+++ b/web/src/app/_component/homeComponent/WorkExperiences/WorkExperiences.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     padding-top: 5rem;
-    background-color: #FFFCF9;
+    background-color: #FFFFFC;
 }
 
 .MainTitle {
@@ -18,7 +18,7 @@
     margin: 0 auto;
     margin-left: 0;
     border-top: 2px solid #49A078;
-    margin: 0 0 4rem 0;
+    margin: 1rem 0 4rem 0;
 }
 
 .MainContainer {
