--- a/web/src/app/_component/homeComponent/AboutMe/AboutMe.module.scss
+++ b/web/src/app/_component/homeComponent/AboutMe/AboutMe.module.scss
@@ -8,7 +8,7 @@
 }
 
 .MainTitle {
-    font-size: 44px;
+    font-size: 2.75rem;
     font-weight: 400;
     color: #212121;
 }
@@ -17,7 +17,7 @@
     width: 10%;
     margin: 0 auto;
     margin-left: 0;
-    border-top: 2px solid #49A078;
+    border-top: 0.125rem solid #49A078;
     margin: 1rem 0 4rem 0;
 }
 
@@ -33,7 +33,7 @@
 }
 
 .SubTitle {
-    font-size: 26px;
+    font-size: 1.625rem;
     font-weight: 500;
     line-height: 2.1rem;
     width: 18rem;
