--- a/web/src/app/_component/homeComponent/ClientSay/ClientSay.module.scss
+++ b/web/src/app/_component/homeComponent/ClientSay/ClientSay.module.scss
@@ -8,7 +8,7 @@
 }
 
 .MainTitle {
-    font-size: 44px;
+    font-size: 2.75rem;
     font-weight: 400;
     color: #212121;
 }
@@ -17,7 +17,7 @@
     width: 10%;
     margin: 0 auto;
     margin-left: 0;
-    border-top: 2px solid #49A078;
+    border-top: 0.125rem solid #49A078;
     margin: 1rem 0 4rem 0;
 }
 
@@ -40,8 +40,8 @@
     margin: 1.5rem;
     padding: 2rem;
     background-color: #FEFFFE;
-    box-shadow: 0px 0px 45px 0px #F0EBEB;
-    border-radius: 6px;
+    box-shadow: 0rem 0rem 2.8125rem 0rem #F0EBEB;
+    border-radius: 0.375rem;
     align-items: center;
     text-align: center;
     justify-content: center;
@@ -49,7 +49,7 @@
 
 .Name {
     @extend .TextContent;
-    font-size: 20px;
+    font-size: 1.25rem;
 }
 
 .TextContent {
@@ -69,7 +69,7 @@
 
 .Image {
     border-radius: 50%;
-    border: 2px solid #49A078;
+    border: 0.125rem solid #49A078;
     margin: 2rem 0 2rem 0;
 }
 
