--- a/web/src/app/_component/homeComponent/WorkExperiences/WorkExperiences.module.scss
+++ b/web/src/app/_component/homeComponent/WorkExperiences/WorkExperiences.module.scss
@@ -8,7 +8,7 @@
 }
 
 .MainTitle {
-    font-size: 44px;
+    font-size: 2.75rem;
     font-weight: 400;
     color: #212121;
 }
@@ -17,7 +17,7 @@
     width: 10%;
     margin: 0 auto;
     margin-left: 0;
-    border-top: 2px solid #49A078;
+    border-top: 0.125rem solid #49A078;
     margin: 1rem 0 4rem 0;
 }
 
@@ -34,12 +34,12 @@
     margin: 1.5rem;
     padding: 2rem 2rem 4rem 2rem;
     background-color: #FEFFFE;
-    box-shadow: 0px 0px 45px 0px #F0EBEB;
-    border-radius: 6px;
+    box-shadow: 0rem 0rem 2.8125rem 0rem #F0EBEB;
+    border-radius: 0.375rem;
 }
 
 .SubTitle {
-    font-size: 30px;
+    font-size: 1.875rem;
     font-weight: 500;
     line-height: 2.1rem;
     width: 10rem;
@@ -62,7 +62,7 @@
 }
 
 .ProgressWrapper {
-    border-radius: 14px;
+    border-radius: 0.875rem;
     overflow: hidden;
     height: auto;
     background-color: #EEEEEE;
@@ -71,7 +71,7 @@
 .ProgressBar {
     width: 70%;
     background-color: #49A078;
-    height: 10px;
+    height: 0.625rem;
 }
 
 @media (max-width: 500px) {
