--- a/web/src/app/_component/homeComponent/AboutMe/AboutMe.module.scss
+++ b/web/src/app/_component/homeComponent/AboutMe/AboutMe.module.scss
@@ -23,8 +23,9 @@
 
 .MainContainer {
     display: flex;
-    width: 100dvw;
-    padding: 0rem 10rem 0rem 10rem;
+    justify-content: center;
+    width: 100vw;
+    align-items: center;
 }
 
 .Content {
@@ -62,10 +63,15 @@
 
 .Image {
     margin-left: 10rem;
+    width: 31.25rem;
+    height: auto;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1300px) {
     .MainContainer {
         flex-direction: column;
+    }
+    .Image {
+        margin: 0;
     }
 }
