--- a/web/src/app/_component/homeComponent/ClientSay/ClientSay.module.scss
+++ b/web/src/app/_component/homeComponent/ClientSay/ClientSay.module.scss
@@ -29,8 +29,7 @@
 
 .MainContainer {
     display: flex;
-    width: 100dvw;
-    padding: 0rem 10rem 0rem 10rem;
+    width: 100vw;
     justify-content: center;
 }
 
@@ -71,10 +70,21 @@
     border-radius: 50%;
     border: 0.125rem solid #49A078;
     margin: 2rem 0 2rem 0;
+    width: 4.375rem;
+    height: auto;
 }
 
-@media (max-width: 500px) {
+.Quote {
+    width: 1.875rem;
+    height: auto;
+}
+
+@media (max-width: 1300px) {
     .MainContainer {
         flex-direction: column;
+    }
+    .Content {
+        margin-right: 8rem;
+        margin-left: 8rem;
     }
 }
