--- a/web/src/app/_component/homeComponent/ServiceProviding/ServiceProviding.module.scss
+++ b/web/src/app/_component/homeComponent/ServiceProviding/ServiceProviding.module.scss
@@ -23,8 +23,7 @@
 
 .MainContainer {
     display: flex;
-    width: 100dvw;
-    padding: 0rem 10rem 0rem 10rem;
+    width: 100vw;
     justify-content: center;
 }
 
@@ -57,8 +56,14 @@
     color: #4D4D4D
 }
 
-@media (max-width: 500px) {
+.Image {
+    width: 18.75rem;
+    height: auto;
+}
+
+@media (max-width: 1300px) {
     .MainContainer {
         flex-direction: column;
+        align-items: center;
     }
 }
