--- a/web/src/app/_component/homeComponent/WorkExperiences/WorkExperiences.module.scss
+++ b/web/src/app/_component/homeComponent/WorkExperiences/WorkExperiences.module.scss
@@ -23,8 +23,7 @@
 
 .MainContainer {
     display: flex;
-    width: 100dvw;
-    padding: 0rem 10rem 0rem 10rem;
+    width: 100vw;
     justify-content: center;
 }
 
@@ -74,8 +73,12 @@
     height: 0.625rem;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1300px) {
     .MainContainer {
         flex-direction: column;
+    }
+    .Content {
+        margin-right: 8rem;
+        margin-left: 8rem;
     }
 }
