--- a/web/src/app/_component/homeComponent/Header/Header.module.scss
+++ b/web/src/app/_component/homeComponent/Header/Header.module.scss
@@ -11,7 +11,7 @@
 .MainContainer {
     display: flex;
     background-color: #F4F8FD;
-    width: 100%;
+    width: 100vw;
     padding: 10rem 10rem 0rem 10rem;
     align-items: center;
     justify-content: center;
