--- a/web/src/app/_component/aboutComponent/Header/Header.module.scss
+++ b/web/src/app/_component/aboutComponent/Header/Header.module.scss
@@ -86,3 +86,18 @@
 .LogoContainer {
     display: flex;
 }
+
+@media (max-width: 1300px) {
+    .SubContainer {
+        flex-direction: column;
+    }
+    
+    .Content {
+        margin: 0rem;
+    }
+
+    .Image {
+        margin: 0 0 3rem 0;
+        width: 24rem;
+    }
+}
